--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../public/assets/css/burger_style.css" type="text/css" />
-    <script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/assets/js/burgers.js"></script>
-    <title>Burger Devouring App!</title>
-</head>
-<body>
-    {{{ body }}}
-</body>
+	<meta charset="UTF-8">
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+		<title>Burger Eater App</title>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/assets/js/burgers.js"></script>
+	</head>
+	<body>
+		{{{ body }}}
+	</body>
 </html>
