--- a/views/partials/burgers/burgerBlock.handlebars
+++ b/views/partials/burgers/burgerBlock.handlebars
@@ -1,6 +1,6 @@
 <li>
-    {{burger_name}}
-        <button class="burgerBlock" data-id="{{id}}" data-eaten="{{devoured}}">
-            {{#if devoured}} EAT ME! {{else}} ORDER AGAIN! {{/if}}
-        </button>
+ {{burger_name}}
+	<button class="burgerBlock" data-id="{{id}}" data-eaten="{{devoured}}">
+		{{#if devoured}}Eat Me !{{else}} Order Again!{{/if}}
+	</button>
 </li>
