--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,24 +8,28 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: 50px 1fr 20px;
   grid-template-areas: "headerSection" "middleSection" "footerSection";
-  grid-row-gap: 10px; }
+  grid-row-gap: 10px; 
+}
   body .center {
     justify-self: center;
-    align-self: center; }
+    align-self: center; 
+}
   body #headerSection {
     grid-area: headerSection;
     background: rgba(192, 107, 121, 0.6);
     text-align: center;
     color: black;
     position: relative;
-    min-height: 100%; }
+    min-height: 100%; 
+}
 
     body #headerSection h2 {
       margin: 0;
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%); }
+      transform: translate(-50%, -50%); 
+}
 
   body #middleSection {
     grid-area: middleSection;
@@ -36,34 +40,35 @@ body {
     font-family: 'Anton', sans-serif;
     color: rgb(182, 74, 80); 
     font-size: 175%;
-  }
+}
     body #middleSection .leftMiddle {
       display: grid;
       grid-area: leftMiddle;
-      background: url("../img/burgerSm.jpeg");
+      background: url("../img/burgerSm2.JPG");
       background-repeat:no-repeat;
-      background-position:center top;
-    }
+      background-position: 25% 75%;
+      background-size: 800px;
+}
     body #middleSection .centerMiddle {
       display: grid;
       grid-area: centerMiddle;
-      background: url("../img/burgerSm.jpeg");
+      background: url("../img/burgerSm2.JPG");
       background-position: center;
-    }
+}
       body #middleSection .rightMiddle {
       display: grid;
       grid-area: rightMiddle;
-      background: url("../img/burgerSm.jpeg");
+      background: url("../img/burgerSm2.JPG");
       background-position: center;
       background-size: 500px;
-    }
+}
   body #footerSection {
-    grid-area: footerSection;
-    position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: rgb(182, 79, 79);
-   color: black;
-   text-align: left;
-   }
+  grid-area: footerSection;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(182, 79, 79);
+  color: black;
+  text-align: left;
+}
